OpenApi: add Okta Integration into IdpType enum

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -54332,6 +54332,7 @@ components:
       - LOGINGOV
       - LOGINGOV_SANDBOX
       - MICROSOFT
+      - OKTA_INTEGRATION
       - OIDC
       - OKTA
       - PAYPAL
