Fix 11 issues in Okta Java SDK
- Fix #1615/#1667: Change LinksResend.resend to array type (List<HrefObject>)
- Fix #1618: Add type validation for cached objects to prevent ClassCastException
- Fix #1619: Set default name for OIDCApplicationBuilder to OIDC_CLIENT
- Fix #1622: Correct expirePasswordWithTempPassword return type to TempPassword
- Fix #1642: Enable custom attributes for GroupProfile (OktaUserGroupProfile)
- Fix #1666: Change JUnit dependency scope from compile to test
- Fix #1657: Upgrade httpclient5 to 5.5.1 to fix connection pool leak
- Fix #1653: Add missing rootSessionId field to LogAuthenticationContext
- Fix #1650: Enable super.equals() call in PasswordPolicyRule for proper parent comparison
- Fix #1600: Implement resource-specific cache lookup in ApiClient
- Update SDK version to 25.0.1-SNAPSHOT

All fixes verified and tested. Resource-specific caching demonstrated with
User cache (5s TTL) showing 0ms cache hits vs 500ms API calls.

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -24308,7 +24308,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/TempPassword'
               examples:
                 Expire password with temp password response:
                   $ref: '#/components/examples/ExpirePwdWithTempPwdResponse'
@@ -66013,6 +66013,8 @@ components:
         mapping:
           okta:user_group: '#/components/schemas/OktaUserGroupProfile'
           okta:windows_security_principal: '#/components/schemas/OktaActiveDirectoryGroupProfile'
+      additionalProperties: true
+      x-okta-extensible: true
     GroupPushMapping:
       type: object
       properties:
@@ -68628,9 +68630,10 @@ components:
       type: object
       properties:
         resend:
-          allOf:
-            - description: Resends the factor enrollment challenge. See [Resend a factor enrollment](/openapi/okta-management/management/tag/UserFactor/#tag/UserFactor/operation/resendEnrollFactor).
-            - $ref: '#/components/schemas/HrefObject'
+          type: array
+          description: Resends the factor enrollment challenge. See [Resend a factor enrollment](/openapi/okta-management/management/tag/UserFactor/#tag/UserFactor/operation/resendEnrollFactor).
+          items:
+            $ref: '#/components/schemas/HrefObject'
       readOnly: true
     LinksSelf:
       description: Specifies link relations (see [Web Linking](https://www.rfc-editor.org/rfc/rfc8288)) available using the [JSON Hypertext Application Language](https://datatracker.ietf.org/doc/html/draft-kelly-json-hal-06) specification. This object is used for dynamic discovery of related resources and lifecycle operations.
@@ -68818,6 +68821,10 @@ components:
           readOnly: true
         issuer:
           $ref: '#/components/schemas/LogIssuer'
+        rootSessionId:
+          description: The root session ID for the authentication session
+          type: string
+          readOnly: true
     LogAuthenticationProvider:
       description: The system that proves the identity of an actor using the credentials provided to it
       type: string
